<resources>
    <string name="app_name">LEAFY2</string>
    <string name="enter_your_email">Enter email</string>
    <string name="enter_your_password">Enter password</string>
    <string name="login">Login</string>
    <string name="sign_up">Create an account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">logout</string>
    <string name="check_your_email">Please check your email inbox</string>
    <string name="failed_to_send_email">Failed to send email</string>
    <string name="failed_to_signup">Failed to sign up</string>
    <string name="signup_success">Registration complete! Please login.</string>
    <string name="authentication_incomplete">Email authentication is not completed</string>
    <string name="login_failed">Failed to login</string>
    <string name="login_success">Successfully logged in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_enter_your_msg">Please enter your message</string>
    <string name="result_healthy">건강한 상태입니다.</string>
    <string name="result_sunburn">화상이 의심됩니다.</string>
    <string name="result_overwatered">과습이 의심됩니다.</string>
    <string name="result_dry">수분부족이 의심됩니다.</string>
    <string name="weather_loading">오늘의 날씨를 불러오고 있습니다.</string>
    <string name="weather_hot">날씨가 너무 더워요 🥵 햇빛과 습도 조절을 주의하세요!</string>
    <string name="weather_good">날씨가 좋아요 😍 오늘을 광합성 실컷 하는 날! 화상만 조심하기~</string>
    <string name="weather_humid">습한 날씨에 무름병에 걸릴 수 있어요! \n실내에 들여두는 게 좋아요. 😉</string>
    <string name="weather_snow">눈을 맞으면 냉해나 무름병이 생길 수 있어요! 실내에 들여두는 게 좋아요. 😉</string>
    <string name="weather_gray">오늘은 날이 흐리네요 😧 최대한 햇빛을 볼 수 있게 해주세요!</string>
    <string name="weather_error"> 에 대한 정보를 불러올 수 없습니다.</string>
    <string name="weather_cold">날씨가 추워요! 실내에 두고, 냉해를 주의하세요. 🥶</string>
    <string name="click">Click 👇</string>
    <string name="tmp">this is tmp string</string>
    <string name="admin_account">Admin Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="cancel">Cancel</string>

</resources>