<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textfield"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/loginpage_width"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textfield"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/loginpage_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:hint="@string/enter_your_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/loginpage_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/login" />

        <Button
            android:id="@+id/signup_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/loginpage_width"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="@dimen/loginpage_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/sign_up"
            android:visibility="gone" />

        <Button
            android:id="@+id/google_login_btn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="@dimen/loginpage_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/login_with_google"
            android:visibility="gone"
            app:icon="@drawable/ic_email" />


        <Button
            android:id="@+id/admin_account_btn"
            android:layout_marginTop="32dp"
            android:text="Admin Account"
            android:layout_width="@dimen/loginpage_width"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>